fix(style): remove width and height property from `canvas#app` cause make stretch the canvas view;

--- a/public/assets/style.css
+++ b/public/assets/style.css
@@ -26,8 +26,6 @@ canvas#app {
 	display: block;
 	padding: 0;
 	margin: 0;
-	width: 100%;
-	height: 100%;
 	overflow: hidden;
 	background: white;
 	color: black;
